...
        try container.encode(videoPreset, forKey: .videoPreset)
        try container.encode(renderBackend, forKey: .renderBackend)
    }

    enum Resolution: String, Codable, CaseIterable, Identifiable {
        case r540p = "540p"
        case r720p = "720p"
        case r1080p = "1080p"
        case r2160p = "4K"

        var id: String { rawValue }

        var width: Int {
            switch self {
...
