...
*/

/* Localizable.strings - Chiaki - English (Base) */

/* MARK: - Common */

"common.cancel" = "Cancel";
"common.save" = "Save";
"common.delete" = "Delete";
"common.done" = "Done";
"common.ok" = "OK";
"common.hide" = "Hide";
"common.unhide" = "Unhide";
...
"common.offline" = "Offline";
"common.standby" = "Standby";

/* MARK: - Navigation */

"nav.hosts" = "Hosts";
"nav.settings" = "Settings";
"nav.general" = "General";
"nav.video" = "Video";
"nav.audio" = "Audio";
"nav.controller" = "Controller";
"nav.account" = "Account";
"nav.consoles" = "Consoles";
...
