...
    case bitrateIncrease

    /// Volume slider in quick settings
    case quickSettingsVolume

    /// Resolution picker
    case resolutionPicker

    /// Apply and reconnect button
    case reconnectButton
}

